kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chatapp
  namespace: chat-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: chat-app.com
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 5001
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-chatapp-svc
            port:
              number: 80
